<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuListOptionAll"
        app:showAsAction="ifRoom"
        android:title="@string/menu_list_options_all"/>
    <item
        android:id="@+id/menuListOptionBaai"
        app:showAsAction="never"
        android:title="@string/menu_list_options_baai"/>
    <item
        android:id="@+id/menuListOptionNoudo"
        app:showAsAction="never"
        android:title="@string/menu_list_options_noudo"/>
    <item
        android:id="@+id/menuListOptionKakuritu"
        app:showAsAction="never"
        android:title="@string/menu_list_options_kakuritu"/>
    <item
        android:id="@+id/menuListOptionSoneki"
        app:showAsAction="never"
        android:title="@string/menu_list_options_soneki"/>
    <item
        android:id="@+id/menuListOptionDaikin"
        app:showAsAction="never"
        android:title="@string/menu_list_options_daikin"/>

</menu>